# src/controllers/user.controller.ts
@@ -19,22 +19,24 @@ import {
 
 @Route("users")
 @Tags("Users")
-@Security("jwt")
 export class UserController extends Controller {
   // Récupère tous les utilisateurs
   @Get("/")
+  @Security("jwt", ["canRead"])
   public async getAllUsers(): Promise<UserOutputDTO[]> {
     return userService.getAllUsers();
   }
 
   // Récupère un utilisateur par ID
   @Get("{id}")
+  @Security("jwt", ["canRead"])
   public async getUserById(@Path() id: number): Promise<UserOutputDTO> {
     return userService.getUserById(id);
   }
 
   // Crée un nouvel utilisateur
   @Post("/")
+  @Security("jwt", ["canWrite"])
   public async createUser(
     @Body() requestBody: UserInputDTO,
   ): Promise<UserOutputDTO> {
@@ -44,12 +46,14 @@ export class UserController extends Controller {
 
   // Supprime un utilisateur par ID
   @Delete("{id}")
+  @Security("jwt", ["canDelete"])
   public async deleteUser(@Path() id: number): Promise<void> {
     await userService.deleteUser(id);
   }
 
   // Met à jour un utilisateur par ID
   @Patch("{id}")
+  @Security("jwt", ["canWrite"])
   public async updateUser(
     @Path() id: number,
     @Body() requestBody: UserInputPatchDTO,
